--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/react-dom": "^18.0.6",
     "daisyui": "^2.41.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
